# voter

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md
.specify/memory/: constitution.md
specs/001-tui-voting-client/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-tui-voting-client/checklists/: requirements.md
specs/001-tui-voting-client/contracts/: ec-protocol.md  tui-screens.md
src/: app.rs  config.rs  error.rs  identity.rs  lib.rs  main.rs  state.rs
src/crypto/: blind_rsa.rs  mod.rs  token.rs
src/nostr/: client.rs  events.rs  messages.rs  mod.rs
src/ui/: election_detail.rs  election_list.rs  help.rs  mod.rs  password.rs  results.rs  settings.rs  vote.rs  welcome.rs
src/ui/widgets/: confirm_dialog.rs  status_bar.rs
tests/: blind_rsa.rs  config.rs  full_flow.rs  identity.rs  integration_blind_rsa.rs  messages.rs  registration.rs
