[package]
name = "voter"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "TUI voting client for the Criptocracia Electoral Commission"

[dependencies]
ratatui = "0.30"
crossterm = { version = "0.29", features = ["event-stream"] }
nostr-sdk = { version = "0.44", features = ["nip59"] }
blind-rsa-signatures = "0.17"
tokio = { version = "1", features = ["full"] }
age = { version = "0.11", features = ["armor"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
sha2 = "0.10"
base64 = "0.22"
secrecy = { version = "0.10", features = ["serde"] }
directories = "6"
tracing = "0.1"
tracing-subscriber = "0.3"
futures = "0.3"
thiserror = "2"
anyhow = "1.0.102"
hex = "0.4.3"
getrandom = "0.4.2"

[lints.clippy]
all = { level = "deny" }

[lints.rust]
unsafe_code = "deny"
